# final-project

./: .env  .gitignore  README.md  final.ipynb  pyproject.toml
data/: .CAvideos.csv.icloud  .DEvideos.csv.icloud  .FRvideos.csv.icloud  .GBvideos.csv.icloud  .INvideos.csv.icloud  .JPvideos.csv.icloud  .KRvideos.csv.icloud  .MXvideos.csv.icloud  .RUvideos.csv.icloud  .USvideos.csv.icloud
